clusters/default/fing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fing-agent
  namespace: fing
  labels:
    app: fing-agent
spec:
  type: ClusterIP
  selector:
    app: fing-agent
  ports:
    - name: web
      port: 80
      targetPort: 4444
      protocol: TCP
