clusters/default/fing/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fing
  namespace: fing
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fing.__BASE-DOMAIN__`)
      kind: Rule
      services:
        - name: fing-agent
          port: 80
